Fix map size on mobile

--- a/web-interface/style.css
+++ b/web-interface/style.css
@@ -338,6 +338,10 @@ body {
   top: 1em;
 }
 
+#map-card img {
+  width: 100%;
+}
+
 #settings-card label {
   /* Override the haven default for labels */
   background: none;
